--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,8 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.8.1
+  sdk: ">=3.3.0 <4.0.0"
+  flutter: ">=3.19.0"
 
 dependencies:
   flutter:
@@ -14,6 +15,7 @@ dependencies:
   
   # HTTP client for API calls
   http: ^1.2.2
+  dio: ^5.5.0
   
   # Secure storage for credentials
   flutter_secure_storage: ^9.2.2
