--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  # Flutter official localizations
+  flutter_localizations:
+    sdk: flutter
+  # Internationalization/formatting (pinned to match Flutter SDK requirement)
+  intl: ^0.20.2
+
   cupertino_icons: ^1.0.8
   
   # HTTP client for API calls
@@ -41,3 +47,4 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true
