--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ context_portal/
 *.ipr
 *.iws
 .idea/
+.env
 
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
