--- a/.github/workflows/build-release-apks.yml
+++ b/.github/workflows/build-release-apks.yml
@@ -72,7 +72,7 @@ jobs:
       - name: Upload app-arm64.apk to release
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: dist/app-arm64.apk
@@ -82,7 +82,7 @@ jobs:
       - name: Upload app-arm.apk to release
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: dist/app-arm.apk
@@ -92,7 +92,7 @@ jobs:
       - name: Upload app-amd64.apk to release
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: dist/app-amd64.apk
