--- a/.github/workflows/build-release-apks.yml
+++ b/.github/workflows/build-release-apks.yml
@@ -74,30 +74,30 @@ jobs:
           cp build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk dist/app-armeabi-v7a-release.apk
           cp build/app/outputs/flutter-apk/app-x86_64-release.apk dist/app-x86_64-release.apk
 
-      - name: Upload app-arm64.apk to release
+      - name: Upload app-arm64-v8a-release.apk to release
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: dist/app-arm64-v8a-release.apk
           asset_name: app-arm64-v8a-release.apk
           asset_content_type: application/vnd.android.package-archive
 
-      - name: Upload app-arm.apk to release
+      - name: Upload app-armeabi-v7a-release.apk to release
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: dist/app-armeabi-v7a-release.apk
           asset_name: app-armeabi-v7a-release.apk
           asset_content_type: application/vnd.android.package-archive
 
-      - name: Upload app-amd64.apk to release
+      - name: Upload app-x86_64-release.apk to release
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: dist/app-x86_64-release.apk
