feat(url_launcher): Integrate url_launcher plugin for launching URLs and update manifest for HTTP/HTTPS queries

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,20 @@
     
     <uses-permission android:name="android.permission.INTERNET" />
     
+    <!-- Required for url_launcher to work with HTTP/HTTPS URLs -->
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data android:scheme="https" />
+        </intent>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data android:scheme="http" />
+        </intent>
+    </queries>
+    
     <application
         android:label="Paperless NGX Uploader"
         android:name="${applicationName}"
