feat: Enhance multi-file upload functionality and permission handling
- Updated README.md to reflect support for multiple file uploads.
- Modified AndroidManifest.xml to include necessary permissions for file access.
- Refactored ShareReceiverActivity to handle multiple shared file paths.
- Added localization strings for multi-file upload success and error messages.
- Introduced UploadResult model to encapsulate upload results for multiple files.
- Enhanced UploadProvider to support uploading multiple files sequentially.
- Implemented PermissionService to manage storage permissions across Android versions.
- Updated home screen to check for storage permissions before file uploads.
- Adjusted IntentHandler to emit batch events for multiple files.
- Added permission_handler dependency for managing permissions.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: paperless_ngx_android_uploader
 description: "A Flutter app for uploading documents to Paperless-NGX via Android share intent"
 publish_to: 'none'
 
-version: 1.5.3
+version: 1.6.0
 
 environment:
   sdk: ">=3.3.0 <4.0.0"
@@ -48,6 +48,9 @@ dependencies:
 
   # URL launching
   url_launcher: ^6.3.1
+
+  # Permission handling
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
