--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,15 @@
     
     <uses-permission android:name="android.permission.INTERNET" />
     
+    <!-- Required for file access from external storage -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    
+    <!-- Required for Android 13+ (API 33+) media access -->
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
+    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
+    <uses-permission android:name="android.permission.READ_MEDIA_DOCUMENTS" />
+    
     <!-- Required for url_launcher to work with HTTP/HTTPS URLs -->
     <queries>
         <intent>
@@ -21,7 +30,8 @@
         android:label="Paperless NGX Uploader"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
-        android:enableOnBackInvokedCallback="true">
+        android:enableOnBackInvokedCallback="true"
+        android:requestLegacyExternalStorage="true">
         
         <activity
             android:name="com.example.paperless_ngx_android_uploader.ShareReceiverActivity"
