--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   # App info and version checking
   package_info_plus: ^8.1.2
   shared_preferences: ^2.3.5
+  device_info_plus: ^11.1.1
 
   # URL launching
   url_launcher: ^6.3.1
