--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "paperless_ngx_android_uploader" "\0"
+            VALUE "FileDescription", "paperlessngx_uploader" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "paperless_ngx_android_uploader" "\0"
+            VALUE "InternalName", "paperlessngx_uploader" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "paperless_ngx_android_uploader.exe" "\0"
-            VALUE "ProductName", "paperless_ngx_android_uploader" "\0"
+            VALUE "OriginalFilename", "paperlessngx_uploader.exe" "\0"
+            VALUE "ProductName", "paperlessngx_uploader" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
