chore: Update workflow trigger to allow manual dispatch and comment out release trigger

--- a/.github/workflows/build-release-apks.yml
+++ b/.github/workflows/build-release-apks.yml
@@ -1,8 +1,9 @@
 name: Build and Upload Release APKs
 
 on:
-  release:
-    types: [published]
+  workflow_dispatch:
+  # release:
+  #   types: [published]
 
 jobs:
   build-and-upload:
