--- a/.github/workflows/build-release-apks.yml
+++ b/.github/workflows/build-release-apks.yml
@@ -1,9 +1,8 @@
 name: Build and Upload Release APKs
 
 on:
-  workflow_dispatch:
-  # release:
-  #   types: [published]
+  release:
+    types: [published]
 
 jobs:
   build-and-upload:
