--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,10 @@ dependencies:
 
   # Permission handling
   permission_handler: ^12.0.1
+  # Desktop drag & drop support for Windows/Linux/macOS
+  desktop_drop: ^0.6.1
+  # Desktop window sizing helpers
+  window_size: ^0.1.0
 
 dev_dependencies:
   flutter_test:
